# woningwaardering

./: .gitignore  .openapi-generator-ignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTEXT.md  FRONTEND_README.md  MANIFEST.in  README.md  genereer_vera_modellen.md  genereer_vera_modellen.sh  genereer_vera_referentiedata.py  mkdocs.yml  pyproject.toml  taskfile.yml  test.ipynb  tmp.ipynb  tmp.py  tox.ini  vera_referentiedata_import.py
.cursor/skills/grill-me-with-docs/: SKILL.md
.cursor/skills/managing-commits/: SKILL.md
.github/: labeler.yml  pull_request_template.md  release.yml
.github/workflows/: ci.yml  cicd.yml  publish-to-pypi.yml  update-readme-links.yml
.openapi-generator/: FILES
.openapi-generator/custom-templates/: __init__model.mustache  model_generic.mustache  model_oneof.mustache
backend/: README.md  requirements.txt
backend/app/: __init__.py  main.py
data_modellen/input/: badkamer_en_of_toilet_boven_en_onder_0.64.json  badkamer_en_of_toilet_boven_en_onder_0.64.md  badkamer_en_of_toilet_tot_0.64.json  badkamer_en_of_toilet_tot_0.64.md  badkamer_en_of_toilet_vanaf_0.64.json
data_modellen/input/zelfstandige_woonruimten/: 12006000004.md  23003000050.json  25048000007.json  25048000007.md  37101000032.json  41162000015.json  41162000015.md  71211000027.json  81065000089.json
docs/: Makefile  README.md  conf.py  contribute.md  contributing.md  datamodel_uitbreidingen.md  gebruik.md  gebruik_per_stelselgroep.md  implementatietoelichtingen.md  index.md  introductie.md  opzet_woningwaardering.md  rtd-requirements.txt  test.md  voorbeelden.md
docs/01_introductie/: index.md  overzicht.md
docs/02_aan_de_slag/: installatie.md
docs/03_implementatietoelichtingen/: index.md  onzelfstandige_woonruimten.md
docs/aan-de-slag/: gebruik.md  index.md
docs/afbeeldingen/: diagram.excalidraw  diagram_english.excalidraw  oppervlakte_van_vertrekken.excalidraw
docs/developers/: contribute.md  main.md
docs/get_started/: main.md  voorbeeld_per_stelselgroep.md
docs/implementatietoelichting-beleidsboeken/: onzelfstandige_woonruimten.md  zelfstandige_woonruimten.md  zelfstandige_woonruimten_januari_2025.md
docs/implementatietoelichting-beleidsboeken/2024/: zelfstandige_woonruimten.md  zelfstandige_woonruimtes.md
docs/implementatietoelichtingen/: datamodel-uitbreidingen.md  datamodel_uitbreidingen.md  index.md  main.md  onzelfstandige-woonruimten.md  zelfstandige-woonruimten.md
docs/implementatietoelichtingen/implementatietoelichting-beleidsboeken/: onzelfstandige_woonruimten.md  zelfstandige_woonruimten.md
docs/introductie/: introductie.md  introductie.md.disable  main.md  main.md.disable  opzet.md
docs/toelichting-beleidsboeken/2024/: zelfstandige_woonruimtes.md
docs/voor-ontwikkelaars/: criteriumstrategie.md  data.md  index.md  logging.md  naamgeving.md  releases.md  testing.md
frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ResultaatDisplay.tsx  WoningForm.tsx
frontend/src/services/: api.ts
frontend/src/templates/: examples.ts
frontend/src/types/: index.ts
input_modellen/: 12006000004.json  23003000050.json  23003000050.md  28018000044.json  37101000032.json  41027000003.json  41162000015.json  41164000002.json  51011000042.json  51011000042.md  71211000027.json  77795000000.json  81020000003.json  81065000089.json  85651000021.json  gedeelde_berging.md
scripts/: genereer_corop_data.py  genereer_opzet_woningwaarderinggroep.py  genereer_test_output.py  genereer_vera_bvg_modellen.py  genereer_vera_referentiedata.py  regen_docs_expected.py  scaffold_woningwaarderinggroep.py  uitbreiden_vera_modellen.py
tests/: _dummy_test.py  conftest.py  peildatum.py  test_utils.py  test_voorzieningen_correctie.py  utils.py
tests/bereken/: test_Woningwaardering.py  test_select_geldige_stelsels.py
tests/data/generiek/: test_Woningwaardering.py
tests/docs/: __init__.py  _examples.py  output_json_json_voorbeeld.json  output_json_python_voorbeeld.json  test_docs.py
tests/docs/zelfstandige_woonruimten/: test_woningwaarderingstelsel.py
tests/readme/: output_json_json_voorbeeld.json  output_json_python_voorbeeld.json  test_readme.py
tests/stelsels/: test_OnzelfstandigeWoonruimten.py  test_Zelfstandig.py  test_ZelfstandigeWoonruimten.py  test_criterium.py  test_criterium_id.py  test_utils.py  test_woningwaardering_groep.py
tests/stelsels/config/: test_config.py
tests/utils/: test_import_class.py  test_is_geldig.py  test_vind_yaml_bestanden.py
wettelijke-documenten/: BWBR0003237-geldend_van_01-01-2024_tm_heden_zichtdatum_06-03-2024.txt
woningwaardering/: 77795000000.json  __init__.py  _dummy.py  _logging.py  _setup.py  _woningwaardering.py  bereken.py  config.yml  utils.py  vera_referentiedata_import.py
woningwaardering/data/: corop.generated.csv
woningwaardering/stelsels/: __init__.py  _dev_utils.py  abstract_stelselgroep.py  bouwers.py  builders.py  criterium.py  criterium_id.py  criteriumsleutels.py  stelsel.py  stelselgroep.py  stelselgroep_resolver.py  stelselgroepversie.py  utils.py  woningwaardering_groep.py
woningwaardering/vera/: referentiedata_uitbreiding.csv  referentiedatasoort.py  utils.py
wws/: _dummy.py
(+2058 files in other folders)
