[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woningwaardering"
version = "0.1.0"
description = "Berekent de punten van een woning op basis van het woningwaarderingstelsel."
authors = [
    { name = "Ben Verhees", email = "ben.verhees@woonstadrotterdam.nl" },
    { name = "Tiddo Loos", email = "tiddo.loos@woonstadrotterdam.nl" },
    { name = "Tomer Gabay", email = "tomer.gabay@woonstadrotterdam.nl" }
]
keywords = ["woning", "waardering", "stelsel", "woningwaarderingsstelsel", "wws"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pre-commit==3.3.*",
    "ruff==0.3.*",
    "pytest==8.0.*",
]
