[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "woningwaardering"
dynamic = ["version"]
description = "Berekent de punten van een woning op basis van het woningwaarderingsstelsel."
authors = [
    { name = "Woonstad Rotterdam", email = "info@woonstadrotterdam.nl"},
    { name = "Ben Verhees", email = "ben.verhees@woonstadrotterdam.nl" },
    { name = "Tiddo Loos", email = "tiddo.loos@woonstadrotterdam.nl" },
    { name = "Tomer Gabay", email = "tomer.gabay@woonstadrotterdam.nl" }
]
keywords = ["woning", "waardering", "stelsel", "woningwaarderingsstelsel", "wws"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.*",
    "loguru==0.7.*",
    "types-pyyaml==6.*",
    "PyYAML==6.*",
    "prettytable==3.*",
    "pandas==2.*"
]

[project.urls]
Homepage = "https://github.com/WoonstadRotterdamTemp/woningwaardering"
Issues = "https://github.com/WoonstadRotterdamTemp/woningwaardering/issues"

[tool.setuptools.packages.find]
include = ["woningwaardering*"]

[tool.setuptools_scm]
version_file = "woningwaardering/_version.py"

[project.optional-dependencies]
test = [
    "pre-commit==3.3.*",
    "ruff==0.3.*",
    "pytest==8.0.*",
    "types-requests==2.*",
    "types-python-dateutil==2.*",
]
dev = [
    "woningwaardering[test]",
    "datamodel-code-generator[http]==0.25.5",
    "unidecode==1.*",
    "jinja2==3.*",
    "types-pyyaml==6.*",
    "PyYAML==6.*",
    "libcst==1.*",
    "requests==2.31.*",
    "inquirer==3.*",
]
