[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "woningwaardering"
dynamic = ["version"]
description = "Berekent de punten van een woning op basis van het woningwaarderingsstelsel."
authors = [
    { name = "Woonstad Rotterdam", email = "info@woonstadrotterdam.nl"},
    { name = "Ben Verhees", email = "ben.verhees@woonstadrotterdam.nl" },
    { name = "Tiddo Loos", email = "tiddo.loos@woonstadrotterdam.nl" },
    { name = "Tomer Gabay", email = "tomer.gabay@woonstadrotterdam.nl" }
]
keywords = ["woning", "waardering", "stelsel", "woningwaarderingsstelsel", "wws"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10",
    "loguru>=0.7",
    "PyYAML>=6.0",
    "prettytable>=3.12",
    "pandas>=2.2",
    "requests>=2.31",
    "types-pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/woonstadrotterdam/woningwaardering"
Issues = "https://github.com/woonstadrotterdam/woningwaardering/issues"

[tool.woningwaardering.datasources]
referentiedata = "v4.2.250117"
vera-openapi = "v4.1.5"

[tool.setuptools.packages.find]
include = ["woningwaardering*"]

[tool.setuptools_scm]
version_file = "woningwaardering/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=woningwaardering --cov-report term --cov-report lcov:lcov.info"

[tool.coverage.run]
omit = [
    # omit generated code
    "woningwaardering/_version.py",
    "woningwaardering/vera/*",
    ]

[project.optional-dependencies]
test = [
    "pre-commit>=3.3",
    "ruff>=0.5",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "types-requests>=2.32",
    "types-python-dateutil>=2.9",
]
dev = [
    "aiohttp>=3.11",
    "woningwaardering[test]",
    "woningwaardering[monumenten]",
    "datamodel-code-generator[http]>=0.25.6",
    "unidecode>=1.3",
    "jinja2>=3.1",
    "libcst==1.4", # tijdelijk, tot release libcst>1.7.0: https://github.com/Instagram/LibCST/pull/1316
    "requests>=2.31",
    "inquirer>=3.4",
    "tomli>=2.2",
]
monumenten = [
    "monumenten>=0.3"
]
